# rust-public

./: .gitignore  README.md
across/: Cargo.toml  run.sh
across/src/: main.rs  puzzle.rs  view.rs
async-backtrace/: Cargo.toml
async-backtrace/examples/: example.rs
async-backtrace/src/: async_capture.rs  capture.rs  format.rs  lib.rs  lldb_capture.rs  remangle.rs  server.rs  spawn.rs  trace.rs  trace_group.rs
async-backtrace/src/remangle/: lexer.rs  mod.rs  parser.rs  path.rs  printer.rs
async-condvar/: Cargo.toml
async-condvar/src/: lib.rs
async-fn/: Cargo.toml
async-fn/async-fn-macros/: Cargo.toml
async-fn/src/: lib.rs
async-future-ext/: Cargo.toml
async-future-ext/src/: lib.rs
async-mrsa-semaphore/: Cargo.toml
async-mrsa-semaphore/src/: lib.rs
async-promise/: Cargo.toml
async-promise/src/: lib.rs
async-semaphore/: Cargo.toml  tests.sh
async-semaphore/src/: atomic.rs  bench.rs  concurrent_queue.rs  freelist.rs  guard.rs  lib.rs  local.rs  mpmc.rs  mpsc_queue.rs  profile.rs  queue.rs  shared.rs  shared_dwcas.rs  shared_mutex.rs  state.rs  tests.rs  util.rs  waker.rs
async-semaphore/src/shared_dwcas/: mod.rs  state.rs
async-semaphore/src/shared_swcas/: mod.rs  waker.rs
async-trait/: Cargo.toml
async-trait-stack/: Cargo.toml
async-trait-stack/src/: lib.rs
async-trait/src/: lib.rs
async-util/: Cargo.toml
async-util/src/: bytes.rs  cancel.rs  coop.rs  delay_writer.rs  dirty.rs  fused.rs  futureext.rs  join.rs  lib.rs  mut_future.rs  parser.rs  pipe.rs  poll.rs  poll_ext.rs  priority.rs  promise.rs  read.rs  spawn.rs  spmc_dirty.rs  timer.rs  waker.rs
async-util/src/pipe/: bounded.rs  mod.rs  sync.rs  unbounded.rs
atomic-sanitizer/: Cargo.toml
atomic-sanitizer/src/: atomic.rs  fiber.rs  heap.rs  lib.rs  schedule.rs
attempt/: Cargo.toml
attempt/src/: lib.rs
cache-map/: Cargo.toml
cache-map/src/: lib.rs
catalog/: Cargo.toml
catalog/catalog-macros/: Cargo.toml
catalog/catalog-macros/src/: lib.rs
catalog/src/: ctor_imp.rs  lib.rs  wasm_imp.rs
catalog/tests/: integrate.rs  wasm.rs
executor/: Cargo.toml
executor/src/: lib.rs
fast-thread-id/: Cargo.toml
fast-thread-id/src/: lib.rs
flatbuffers-serde/: Cargo.toml  build.rs
flatbuffers-serde/schema/: any.fbs  any_raw.fbs  test.fbs
flatbuffers-serde/src/: any_generated.rs  buffer.rs  de.rs  flat_util.rs  lib.rs  macros.rs  reexport.rs  ser.rs  tag.rs  test.rs  vec_slice.rs
flatbuffers-serde/src/de/: error.rs  field.rs  identity.rs  map.rs  mod.rs  none.rs  table.rs  vector.rs  wrapper.rs
flatbuffers-serde/src/ser/: enu.rs  error.rs  map.rs  mod.rs  table.rs  value.rs  vector.rs  wrapper.rs
flatbuffers-serde/tests/: test.rs
flatc-build/: Cargo.toml
flatc-build/src/: lib.rs
local-pool/: Cargo.toml
local-pool/src/: lib.rs
local-pool/tests/: test.rs
metric/: Cargo.toml
metric/data/: metrics.sqlite
metric/src/: database.rs  histogram.rs  keys.rs  lib.rs  metric.rs  metric_set.rs  sum.rs  table.rs  values.rs
netcatd/: Cargo.toml  release.sh
netcatd/examples/: demo.rs
netcatd/src/: demo.rs  lib.rs  proxy.rs  replay.rs  tcp.rs  timer.rs
proc-macro-helper/: Cargo.toml
proc-macro-helper/proc-macro-helper-test/: Cargo.toml
proc-macro-helper/proc-macro-helper-test/src/: lib.rs
proc-macro-helper/proc-macro-helper-test/tests/: proc_macro_helper_test.rs
proc-macro-helper/src/: attr_group.rs  attr_table.rs  attr_value.rs  attrs.rs  helper.rs  lib.rs  tests.rs
reentrant-refcell/: Cargo.toml
reentrant-refcell/src/: lib.rs
registry/: Cargo.toml
registry/registry-macros/: Cargo.toml
registry/registry-macros/src/: lib.rs
registry/src/: ctor_imp.rs  lib.rs  safe_cell.rs  wasm_imp.rs
registry/tests/: integrate.rs  test_bad.rs  test_good.rs  wasm.rs
safe-cell/: Cargo.toml
safe-cell/src/: cov_cell.rs  cov_lazy.rs  lib.rs  map.rs  safe_lazy.rs  safe_once_cell.rs  tests.rs
serde-any/: Cargo.toml
serde-any/src/: any.rs  binary.rs  de.rs  lib.rs  macros.rs  ser.rs  tag.rs  test.rs
serde-any/src/ser/: binary.rs  json.rs  mod.rs
serde-any/tests/: any.rs  test.rs
serde-any/tests/common/: any_string.rs  custom.rs  mod.rs
serde-schema/: Cargo.toml
serde-schema/src/: builder.rs  error.rs  lib.rs
take-cell/: Cargo.toml
take-cell/src/: lib.rs
termio/: Cargo.toml
termio/advance/: Cargo.toml
termio/advance/src/: main.rs
termio/examples/: animate.rs  gui.rs  gui.sh
termio/src/: advance.rs  canvas.rs  color.rs  demo.rs  gui.rs  image.rs  input.rs  lib.rs  line.rs  output.rs  prompt.rs  screen.rs  string.rs  symbols.rs  tokenizer.rs  write.rs  writer.rs
termio/src/gui/: button.rs  checkbox.rs  container.rs  context.rs  controller.rs  div.rs  event.rs  field.rs  flow.rs  group.rs  gui.rs  label.rs  layout.rs  mod.rs  mvc.rs  node.rs  pad.rs  select.rs  table.rs  time.rs  tree.rs  view.rs
termio/src/gui_old/: button.rs  container.rs  label.rs  mod.rs  node.rs
typetag-static/: Cargo.toml
typetag-static/src/: impls.rs  json.rs  lib.rs  macros.rs  reexport.rs  tag.rs  util.rs
typetag-static/src/binary/: any.rs  de.rs  mod.rs  ser.rs  test.rs
typetag-static/tests/: test.rs
typetag-static/tests/common/: any_string.rs  custom.rs  mod.rs
units/: Cargo.toml
units/src/: ast.rs  check.rs  eval.rs  factors.rs  grammar.lalrpop  lib.rs  map.rs  tests.rs  unicode.rs  unit.rs  value.rs  variants.rs
util/: Cargo.toml
util/examples/: web.rs
util/src/: any.rs  atomic_refcell.rs  bag.rs  cancel.rs  completable.rs  dirty.rs  dynbag.rs  expect.rs  fun.rs  grid.rs  io.rs  itertools.rs  lib.rs  listen.rs  lossy.rs  mutrc.rs  object.rs  pmpsc.rs  profile.rs  range.rs  rangemap.rs  rect.rs  rng.rs  shared.rs  shared_cell.rs  shutdown.rs  slice.rs  socket.rs  sums.rs  take_cell.rs  take_vec.rs  time.rs  tree.rs  union.rs  watch.rs  weak_vec.rs  web.rs
waker-util/: Cargo.toml
waker-util/src/: lib.rs
weak-vec/: Cargo.toml
weak-vec/src/: lib.rs
wordle/: .gitignore  Cargo.toml
wordle/src/: edit_graph.rs  hint.rs  main.rs  pair_hint.rs  strategy.rs  word.rs
words/: Cargo.toml
