[package]
name = "across"
version = "0.1.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
arrayvec = "0.5.2"
termio = { path = "../termio" }
util = { path = "../util" }
