[package]
name = "async-backtrace"
version = "0.1.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.0.6"
tokio = { version = "1.5.0", features = ["process", "io-util", "io-std", "rt", "fs", "net", ] }
lazy_static = "1.4.0"
util = { path = "../util" }
parking_lot = "0.11.1"
backtrace = "0.3.56"
itertools = "0.10.0"
either = "1.6.1"
hyper = { version = "0.14.5", features = ["server", "http1", "tcp"] }
tempfile = "3.2.0"
lookahead = "0.1.0"
async-util = { path = "../async-util" }
tokio-stream = { version = "0.1.5", features = ["sync"] }
