[package]
name = "async-condvar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { git = "https://github.com/Amanieu/parking_lot/", rev = "80194730f2104fa5ca92fe17a619b57d0677ece7"}

[dev-dependencies]
tokio = { version = "1.19.2", features = ["rt", "macros"] }
