[package]
name = "async-semaphore"
version = "0.1.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]

[dev-dependencies]
rand_xorshift = "0.2.0"
itertools = "0.9.0"
rand = "0.7.3"
lazy_static = "1.4.0"
crossbeam = "0.7.3"
concurrent-queue = "1.2.2"
async-std = "1.6.3"
defer = "0.1.0"

[dev-dependencies.futures]
version = "0.3.5"
features = ["thread-pool"]

