[package]
name = "atomic-sanitizer"
version = "0.1.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.77"
lazy_static = "1.4.0"

[dependencies.futures]
version = "0.3.5"
features = ["thread-pool"]

