[package]
name = "flatbuffers-serde"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "2.0.0"
serde = { version = "1.0.130", features = ["derive"] }
itertools = "0.10.1"
lazy_static = "1.4.0"

[build-dependencies]
flatc-build = { version = "0.1.0", path = "../flatc-build" }
