[package]
name = "flatbuffers-serde"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "2.1.2"
serde = { version = "1.0.137", features = ["derive"] }
itertools = "0.10.3"
lazy_static = "1.4.0"
catalog = { version = "0.1.0", path = "../catalog" }
sha2 = "0.10.2"

[build-dependencies]
flatc-build = { version = "0.1.0", path = "../flatc-build" }

[dev-dependencies]
serde_bytes = "0.11.6"
