[package]
name = "metric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { git = "https://github.com/Amanieu/parking_lot/", rev = "80194730f2104fa5ca92fe17a619b57d0677ece7"}
ordered-float = "3.0.0"
rusqlite = "0.27.0"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
by_address = "1.0.4"
tuple_list = "0.1.3"
