[package]
name = "netcatd"
version = "0.1.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attempt = {path = "../attempt"}
termio = {path = "../termio"}
util = {path = "../util"}
itertools = "0.9.0"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"