[package]
name = "serde-any"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.66"
paste = "1.0.5"
lazy_static = "1.4.0"
sha2 = "0.9.5"
inventory = "0.1"
