[package]
name = "serde-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
itertools = "0.10.3"
serde_bytes = "0.11.6"
