[package]
name = "termio"
version = "0.1.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
util = { path = "../util" }
async-util = { path = "../async-util" }
unicode-segmentation = "1.9.0"
serde_derive = "1.0.137"
serde = "1.0.137"
rand = "0.8.5"
lazy_static = "1.4.0"
backtrace = "0.3.65"
#chrono = "0.4.19"
arrayvec = "0.7.2"
vec_map = "0.8.2"
strum = "0.24.0"
strum_macros = "0.24.0"
by_address = "1.0.4"
libc = "0.2.126"
pin-project = "1.0.10"
float-ord = "0.3.2"
tokio = { version = "1.19.2", features = ["macros", "time", "io-std", "io-util"] }
tokio-stream = "0.1.9"
async-backtrace = { path = "../../runtime/async-backtrace" }
