[package]
name = "typetag-static"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
paste = "1.0.5"
lazy_static = "1.4.0"
sha2 = "0.9.6"
inventory = "0.1.10"
