[package]
name = "typetag-static"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
paste = "1.0.7"
lazy_static = "1.4.0"
sha2 = "0.10.2"
catalog = { path = "../catalog" }
