[package]
name = "units"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.6"
regex = "1.5.4"
ustr = "0.8.0"
retain_mut = "0.1.3"
ordered-float = "2.7.0"
im = "15.0.0"
itertools = "0.10.1"

[build-dependencies]
lalrpop = "0.19.6"
