[package]
name = "units"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.8"
regex = "1.5.6"
ustr = "0.8.1"
retain_mut = "0.1.9"
ordered-float = "3.0.0"
im = "15.1.0"
itertools = "0.10.3"

[build-dependencies]
lalrpop = "0.19.8"
