[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id_collections = { version = "1.0.1", features = ["serde"] }
arrayvec = "0.7.2"
itertools = "0.10.3"
bincode = "1.3.3"
serde = { version = "1.0.137", features = ["derive"] }
rand = "0.8.5"
safe-cell = { path = "../safe-cell" }
parking_lot = { git = "https://github.com/Amanieu/parking_lot/", rev = "80194730f2104fa5ca92fe17a619b57d0677ece7" }
