[package]
name = "proc-macro-helper-test"
version = "0.0.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
proc-macro2 = "1.0.39"
syn = "1.0.96"
proc-macro-helper = { path = "../../proc-macro-helper" }
