[package]
name = "advance"
version = "0.1.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
byteorder = "1.3.4"
serde_derive = "1.0"
serde = "1.0"
rand = "0.7.3"
lazy_static = "1.4.0"
backtrace = "0.3"
chrono = "0.4.19"
arrayvec = "0.5.2"
vec_map = "0.8.2"
strum = "0.20"
strum_macros = "0.20"
by_address = "1.0.4"
libc = "0.2.82"
unic-bidi = "0.9.0"
unic-ucd-age = "0.9.0"
font = "0.3.2"
unic-segment = "0.9.0"
unic-ucd-segment = "0.9.0"

